--- a/src/app/core/components/pages/home/home.component.html
+++ b/src/app/core/components/pages/home/home.component.html
@@ -1,2 +1,8 @@
-<p class="text-lg text-white">home works!</p>
-
+<div class="flex flex-col items-center gap-5">
+    <p class="mt-10 text-2xl font-semibold text-white text-center">Losowe fakty o kotach!</p>
+    <div class="flex flex-wrap w-full p-5 gap-5 justify-center ">
+        <ng-container *ngIf="randomFacts.length > 0">
+            <div class="flex items-center justify-center w-[23%] bg-white p-4 text-black rounded-md font-medium" *ngFor="let fact of randomFacts">{{ fact }}</div>
+        </ng-container>
+    </div>
+</div>
