--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="flex w-full items-center min-h-screen justify-center ">
+<div class="flex w-full items-center min-h-screen justify-center bg-gray-100">
     <router-outlet></router-outlet>
 </div>
