--- a/src/app/core/components/pages/home/home.component.html
+++ b/src/app/core/components/pages/home/home.component.html
@@ -1,8 +1,9 @@
-<div class="flex flex-col items-center gap-5">
-    <p class="mt-10 text-2xl font-semibold text-white text-center">Losowe fakty o kotach!</p>
-    <div class="flex flex-wrap w-full p-5 gap-5 justify-center ">
-        <ng-container *ngIf="randomFacts.length > 0">
-            <div class="flex items-center justify-center w-[23%] bg-white p-4 text-black rounded-md font-medium" *ngFor="let fact of randomFacts">{{ fact }}</div>
-        </ng-container>
+<div class="flex flex-col  items-center gap-5 w-full lg:min-w-[1300px] lg:max-w-[1300px] min-h-screen bg-white px-5 py-10">
+    <h1 class="text-2xl font-extralight">Losowe fakty o kotach</h1>
+    <p class=" font-extralight text-center">Zjeżdzając w dół fakty o kotach będą ładować się automatycznie.</p>
+    <div class="flex flex-wrap items-center justify-center mt-10 w-full gap-5" infiniteScroll [infiniteScrollDistance]="3" [infiniteScrollThrottle]="150" (scrolled)="downloadMore()">
+        <div class="flex items-center justify-center px-5 py-2 w-full lg:w-[32%] rounded-md border border-black border-opacity-5 shadow-lg min-h-[260px] hover:scale-90 transition-transform " *ngFor="let fact of randomFacts">
+            <p class="text-sm font-light ">{{ fact }}</p>
+        </div>
     </div>
 </div>
